# DRF_Project

./: .dockerignore  .env.sample  .gitignore  Corsework_9.md  Dockerfile  Homework_30.1.md  Homework_30.2.md  Homework_31.md  Homework_32.1.md  Homework_32.2.md  Homework_33.md  Homework_34.2.md  Homework_35.2.md  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml
config/: celery.py  settings.py  urls.py
materials/: models.py  paginations.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_course_options_alter_lesson_options.py  0002_course_owner_lesson_owner.py  0003_alter_lesson_course.py  0003_subscribeupdatecourse.py  0004_alter_subscribeupdatecourse_is_subscribe.py  0005_alter_subscribeupdatecourse_course_and_more.py  0006_course_updated_at.py
materilas/: apps.py
nginx/: Dockerfile  nginx.conf
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/fixtures/: groups_fixture.json  periodic_tasks_fixture.json
users/management/commands/: add_payments.py  csu.py
users/migrations/: 0001_initial.py  0002_alter_payment_payment_date.py  0003_alter_payment_payment_date.py  0004_payment_link_payment_session_id.py
